<resources>
    <string name="app_name">JMTI</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="search_product">Search Product</string>
    <string name="title_activity_seller_login">SellerLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_as_seller">Login as Seller</string>
    <string name="title_activity_seller_main">SellerMainActivity</string>
    <string name="orders">Orders</string>
    <string name="item">Item</string>
    <string name="phone_number">Phone Number</string>
    <string name="seller_information">Seller Information</string>
    <string name="shop">Shop Information</string>
    <string name="shipping_ch">Shipping Channel</string>
    <string name="seller">Seller</string>
    <string name="full_name">Full Name</string>
    <string name="next">Next</string>
    <string name="shop_information">Shop Information</string>
    <string name="shipping_information">Shipping Channel</string>
    <string name="login_as_buyer">Login as Buyer</string>
    <string name="add_new_product">Add New Product</string>
    <string name="product_image_url">Enter or Paste Product Image Url</string>
    <string name="product_name">Product Name</string>
    <string name="product_category">Product Category</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="shipping_info">Standard delivery is automatically enabled \n\nWill be assigned according to your pickup address \n\nAt least one shipping channel is required.</string>
    <string name="shipping_channel">Shipping Channel</string>
    <string name="profile">Profile</string>
</resources>