<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SellerShippingInfo">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="16sp"
        android:text="@string/shipping_information"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/nodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/circle_filled"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/circle_filled"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/circle_filled"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/titleMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nodeTitle"
        android:layout_margin="10dp"
        android:text="@string/shipping_channel"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_below="@id/titleMain"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_rect"
        android:padding="10dp"
        android:text="@string/shipping_info" />

    <LinearLayout
        android:id="@+id/nodeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nodes"
        android:layout_marginBottom="24dp"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16sp"
            android:text="@string/seller_information"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16sp"
            android:text="@string/shop"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16sp"
            android:text="@string/shipping_ch"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="11sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnBack"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:text="@string/confirm" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBack"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:background="#00000000"
        android:text="@string/back"
        android:textColor="@color/design_default_color_primary" />

</RelativeLayout>