<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.waaztech.jmti.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/detailFragment" >
            <argument
                android:name="id"
                app:argType="string"
                android:defaultValue="" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.waaztech.jmti.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.waaztech.jmti.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.waaztech.jmti.ui.detail.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail" />
    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.waaztech.jmti.ui.orders.OrdersFragment"
        android:label="OrdersFragment" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.waaztech.jmti.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>