<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SellerRegisterInfo">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:padding="16sp"
        android:text="@string/seller_information"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/nodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:weightSum="3">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/circle_filled"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/circle"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/circle"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nodeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nodes"
        android:layout_marginBottom="24dp"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16sp"
            android:textSize="11sp"
            android:text="@string/seller_information"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16sp"
            android:textSize="11sp"
            android:text="@string/shop"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16sp"
            android:text="@string/shipping_ch"
            android:textSize="11sp"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nodeTitle"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:hint="@string/full_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtName"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:hint="IC Number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        android:layout_above="@id/btnBack"
        android:layout_centerHorizontal="true"
        android:text="@string/next"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:layout_centerHorizontal="true"
        android:background="#00000000"
        android:id="@+id/btnBack"
        android:layout_width="180dp"
        android:textColor="@color/design_default_color_primary"
        android:layout_height="wrap_content"
        android:text="@string/back"/>

</RelativeLayout>