<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".LoginActivity">

    <TextView
        android:layout_margin="24dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/edtUser"
        android:text="Seller Login"
        android:textColor="@color/black"
        android:padding="10dp"
        android:background="@drawable/rounded_rect"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_above="@id/edtPass"
        android:layout_centerHorizontal="true"
        android:hint="Username">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_above="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:hint="Password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_centerHorizontal="true"
        android:background="#00000000"
        android:id="@+id/btnRegister"
        android:layout_width="180dp"
        android:textColor="@color/design_default_color_primary"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:text="@string/register"/>

    <TextView
        android:id="@+id/txtOr"
        android:text="OR"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_centerHorizontal="true"
        android:background="#00000000"
        android:id="@+id/btnBack"
        android:layout_width="180dp"
        android:textColor="@color/design_default_color_primary"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtOr"
        android:text="@string/login_as_buyer"/>

</RelativeLayout>