<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtEmail"
        android:layout_centerHorizontal="true"
        android:layout_margin="24dp"
        android:background="@drawable/rounded_rect"
        android:padding="10dp"
        android:text="Buyer Login"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/edtPass"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:hint="Email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:hint="Password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:text="@string/login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:background="#00000000"
        android:text="@string/register"
        android:textColor="@color/design_default_color_primary" />

    <TextView
        android:id="@+id/txtOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegister"
        android:layout_centerHorizontal="true"
        android:text="OR" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoginSeller"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtOr"
        android:layout_centerHorizontal="true"
        android:background="#00000000"
        android:text="@string/login_as_seller"
        android:textColor="@color/design_default_color_primary" />

</RelativeLayout>