<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:hint="Full Name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUserInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtUser"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:hint="Email Address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtEmail"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:hint="Password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPass"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:hint="@string/phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPhoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnConfirmRegister"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtPhone"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnConfirmRegister"
        android:layout_centerHorizontal="true"
        android:text="@string/back" />


</RelativeLayout>